# noradar-content-engine

./: .env.example  .gitignore  Makefile  README.md  gdrive_auth.py  pyproject.toml  rename_drive_videos.py  rename_videos.py  setup.sh  test_avatar_standalone.py  test_whisper.py
outputs/seo/: comment-contester-pv.html  contester-amende-feu-rouge.html  contester-amende-radar.html  contester-amende-stationnement.html  delai-contestation-amende.html  modele-lettre-contestation-amende.html  robots.txt  sitemap.xml
outputs/seo/blog/: amende-entreprise-non-designation.html  amende-majoree-contestation.html  amende-recue-apres-1-an.html  amende-sans-photo-radar.html  amende-voiture-pretee.html  amende-zone-30.html  contester-amende-ceinture-securite.html  contester-amende-pas-conducteur.html  contester-amende-peage.html  contester-amende-radar-mal-flashe.html  contester-amende-sans-avocat.html  contester-pv-stationnement-horodateur.html  documents-contestation-amende.html  erreur-plaque-immatriculation-amende.html  erreurs-contestation-amende.html  exces-vitesse-marge-erreur.html  flash-radar-nuit-contestation.html  pv-electronique-contestation.html  radar-mobile-contestation.html  retrait-points-permis-contestation.html
src/: __init__.py  config.py  config.py.bak  config.py.bak2  config.py.bak3  config.py.bak4  main.py  main.py.bak  models.py  models.py.bak4
src/analytics/: distribution.py  performance.py
src/carousel/: __init__.py  generator.py  renderer.py
src/pipeline/: orchestrator.py  orchestrator.py.bak  orchestrator.py.bak3  orchestrator.py.bak4  validator.py
src/scripts/: analytics.py  generator.py  generator.py.bak  generator.py.bak3  generator.py.bak4  generator.py.bak_prompts  generator.py.bak_v3
src/seo/: builder.py  generator.py  generator.py.bak  keywords.py
src/storage/: content_store.py  gdrive.py  gdrive.py.bak  gdrive.py.bak3
src/utils/: retry.py
src/video/: avatar.py  composer.py  composer.py.bak  hybrid_composer.py
src/voice/: elevenlabs.py  generator.py  generator.py.bak3
